infrastructure/stalwart/roundcube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: roundcube
  labels:
    app: roundcube
spec:
  replicas: 1
  selector:
    matchLabels:
      app: roundcube
  template:
    metadata:
      labels:
        app: roundcube
    spec:
      containers:
        - name: roundcube
          image: mirror.gcr.io/roundcube/roundcubemail:latest@sha256:bf9a6f352d6a8ab4a8c59de6003b7c5694ed8e356f4e30418df9f8c313ad866c
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 0m
              memory: 0Mi
            limits:
              cpu: 1
              memory: 500Mi
